bin/testsuite/tests/compiler/src/errors/compiler4958.swg
#global testerror "Err0675";
)
